# sidecar

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flavor.toml  manage.ps1  manage.sh  negentropy.toml  runseal.toml  vocabulary.toml
.github/scripts/release/assets/: verify.sh
.github/scripts/release/r2/: publish.sh  verify.sh
.github/scripts/release/smoke/: smoke.ps1  smoke.sh
.github/workflows/: guard.yml  release-beta.yml  release.yml
.runseal/: deno.json  negentropy.version
.runseal/lib/: cli.ts  negentropy.ts
.runseal/lib/std/: cmd.ts  fs.ts  io.ts  json.ts  path.ts
.runseal/wrappers/: cloudflare  cloudflare.seal  guard.ts  init.seal  init.ts  land.ts
.task/: MAIN.md  PHASE_1.1.md  PHASE_1.2.md
.task/archive/: PHASE_1.1.r1.md
crates/cli/: Cargo.toml
crates/cli/src/: broker.rs  broker_runtime.rs  cli.rs  commands.rs  lib.rs  output.rs  update.rs
crates/cli/tests/: broker.rs  broker_runtime.rs  cli.rs  config_discovery.rs  discovery.rs  inspect.rs  inspect_payload.rs  parse.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  inspect.rs  lib.rs  paths.rs  percent.rs  plan.rs  process.rs  socket.rs  stamp.rs  state.rs
crates/core/src/runtime/: broker.rs  mod.rs  process.rs  tcp.rs
crates/core/tests/: broker.rs  inspect.rs  paths.rs  process.rs  socket.rs  stamp.rs  state.rs  tcp.rs
docs/: tcp-broker-runtime.md
examples/: minimal.toml
scripts/: init.py  pyproject.toml
scripts/cli/: cloudflare.py
scripts/lib/: cloudflare.py
scripts/lib/utils/: paths.py
scripts/manage/: sidecar.ps1  sidecar.sh
(+2 files in other folders)
