[package]
name = "core"
version = "0.5.2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sidecar_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Console",
  "Win32_System_Threading",
] }
